css/flexbox-fundamentals-exercise.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    background: lightskyblue;
    font-family: Chalkboard, sans-serif;
}

h1 {
    text-align: center;
}

h2, h3 {
    padding: 0;
    margin: 0;
}

.container {
    margin: 0 auto;
    width: 80%;
}

.green-box {
    background: green;
    height: 1em;
    width: 2em;
}

.border {
    border: 2px solid black;
}

.card {
    width: 400px;
    height: 800px;
    background: white;
    padding: 1em;
    margin: 0 auto;
    /* enter needed declarations here */
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    row-gap: 20px;

}

section {
    /* enter needed declarations here */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;

}

section:nth-of-type(1) {
    height: 3em;
    background: lightgreen;
    /* enter needed declarations here */
    display: flex;
    justify-content: space-between;

}

section:nth-of-type(1) div:last-child {
    /* enter needed declarations here */
    align-self: start;
}

.purple-box {
    background: fuchsia;
    width: 3em;
    height: 1em;
}

.purple-box:nth-of-type(1) {
    /* enter needed declarations here */
    flex-grow: 2;
}

.purple-box:nth-of-type(2) {
    /* enter needed declarations here */
    flex-grow: 1;
}

.blue-box {
    width: 100%;
    background: blue;
    height: 10em;
}

section:nth-of-type(3) {
    /* enter needed declarations here */
    display: flex;
    align-items: center;

}

section:nth-of-type(3) h3 {
    /* enter needed declarations here */
    flex-grow: 2;

}

.orange-circle {
    background: orange;
    width: 2em;
    height: 2em;
    border-radius: 1em;
    margin: .5em;
}

.large-brown-box {
    height: 5em;
    width: 5em;
    background: brown;
    /* enter needed declarations here */
    flex-grow: 1;
}

.large-brown-box:nth-of-type(2) {
    margin: 0 1em;
}

section:nth-of-type(5) {
    /* enter needed declarations here */
    justify-content: space-evenly;
}

.yellow-box {
    background: yellow;
    width: 2em;
    height: 2em;
}

section:nth-of-type(6) {
    background: coral;
    height: 14em;
    /* enter needed declarations here */
    display: flex;
}

.grey-box {
    background: grey;
    width: 3em;
    height: 3em;
}

.grey-box:nth-of-type(odd) {
    height: 4em;
}

/*
Bonus portion
*/


#flex--container {
    width: 35%;
    height: 800px;
    display: flex;
    margin: 80px auto;
    outline: 2px solid #fff;
    justify-content: center;
}

.content--container {
    width: 90%;
    outline: 2px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: space-around;
    row-gap: 20px;
    padding: 20px 0;
}

.items--container {
    outline: 2px solid blue;
    width: 100%;
    height: 10%;
}


/*
green boxes
*/

.container--green {
    background-color: lightgreen;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.green--box {
    width: 10%;
    height: 16px;
    background-color: green;
    display: flex;
}


.container--green:nth-of-type(1) div:last-child {
    /* enter needed declarations here */
    align-self: start;
}

